[gd_scene load_steps=19 format=3 uid="uid://cubn2x83cgx04"]

[ext_resource type="PackedScene" uid="uid://btips1eu2m7eb" path="res://Scenes/map_1.tscn" id="1_5nqbg"]
[ext_resource type="Script" path="res://Scenes/game_scene.gd" id="1_yc5q3"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="3_21h4m"]
[ext_resource type="Texture2D" uid="uid://dgeptecon8lqe" path="res://Assets/MapAssets/Objective/Brickwall-vertical.png" id="4_vw16h"]
[ext_resource type="Texture2D" uid="uid://w0hanpa5703p" path="res://Assets/CharakterAssets/Charakters/Mage/StaffHero-outline1.png" id="5_3spcr"]
[ext_resource type="Script" path="res://Scenes/Castle.gd" id="6_jsuhw"]
[ext_resource type="LabelSettings" uid="uid://c4jusp4dpbwya" path="res://Assets/UI/CharacterText.tres" id="6_mn02w"]
[ext_resource type="Texture2D" uid="uid://co76e0eb2rs68" path="res://Assets/CharakterAssets/Charakters/Meele/SwordElf-outline1.png" id="7_eucrw"]
[ext_resource type="Texture2D" uid="uid://natgx5kvjh3w" path="res://Assets/CharakterAssets/Charakters/Tank/Oxbear-outline1.png" id="8_u87ka"]
[ext_resource type="Texture2D" uid="uid://bijp6ie7b2dw" path="res://Assets/CharakterAssets/Charakters/Miner/Goblin-outline1.png" id="9_aadn8"]
[ext_resource type="FontFile" uid="uid://bcvj7wj8h2f67" path="res://Assets/Fonts/runescape_uf.ttf" id="10_dshx7"]
[ext_resource type="Theme" uid="uid://kwad2sw0bmc1" path="res://Assets/UI/HPBarTheme.tres" id="11_1vmyv"]
[ext_resource type="PackedScene" uid="uid://cap76vqms4r2j" path="res://Scenes/UI/death_screen.tscn" id="13_i1y4i"]

[sub_resource type="LabelSettings" id="LabelSettings_hujsj"]
font = ExtResource("10_dshx7")
font_size = 50
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fekdy"]
font = ExtResource("10_dshx7")
font_size = 40
font_color = Color(0.988235, 0.878431, 0.580392, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqsv7"]
size = Vector2(316.435, 306.336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4duwd"]
size = Vector2(313.069, 302.97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77shi"]
size = Vector2(142, 140)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_yc5q3")

[node name="Map1" parent="." instance=ExtResource("1_5nqbg")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_21h4m")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Mage" type="TextureButton" parent="UI/HUD" groups=["build_buttons"]]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 146.0
offset_top = -46.0
offset_right = 191.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4_vw16h")
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="UI/HUD/Mage"]
layout_mode = 0
offset_left = -6.0
offset_top = -168.0
offset_right = 221.0
offset_bottom = -10.0
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Mage"]
layout_mode = 0
offset_left = -7.0
offset_top = -55.0
offset_right = 53.0
offset_bottom = 40.0
texture = ExtResource("5_3spcr")

[node name="Label" type="Label" parent="UI/HUD/Mage"]
layout_mode = 0
offset_left = -126.0
offset_top = -260.0
offset_right = 174.0
offset_bottom = -13.0
text = "Makes enemy in Range magicly disappear

Static, invincable 
600g"
label_settings = ExtResource("6_mn02w")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="MeeleSpawner" type="TextureButton" parent="UI/HUD" groups=["build_buttons"]]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -46.0
offset_right = -43.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4_vw16h")
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="UI/HUD/MeeleSpawner"]
layout_mode = 0
offset_left = -9.0
offset_top = -177.0
offset_right = 318.0
offset_bottom = -15.0
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="UI/HUD/MeeleSpawner"]
layout_mode = 0
offset_left = -14.0
offset_top = -45.0
offset_right = 58.0
offset_bottom = 43.0
texture = ExtResource("7_eucrw")

[node name="Label" type="Label" parent="UI/HUD/MeeleSpawner"]
layout_mode = 0
offset_left = -192.5
offset_top = -253.0
offset_right = 238.5
offset_bottom = -22.0
text = "Roams between 2 moveable posts, destroys enemy on impact

Moving, 12HP
150g"
label_settings = ExtResource("6_mn02w")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="Tank" type="TextureButton" parent="UI/HUD" groups=["build_buttons"]]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -46.0
offset_right = 78.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4_vw16h")
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="UI/HUD/Tank"]
layout_mode = 0
offset_left = -9.0
offset_top = -210.0
offset_right = 319.0
offset_bottom = -26.0
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Tank"]
layout_mode = 0
offset_left = -6.25002
offset_top = -56.6666
offset_right = 51.75
offset_bottom = 40.3334
texture = ExtResource("8_u87ka")

[node name="Label" type="Label" parent="UI/HUD/Tank"]
layout_mode = 0
offset_left = -148.75
offset_top = -263.667
offset_right = 197.25
offset_bottom = -39.6667
text = "Roams in a circle, 
destroys enemy on impact

Moving, 20HP
300g"
label_settings = ExtResource("6_mn02w")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Miner" type="TextureButton" parent="UI/HUD" groups=["build_buttons"]]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -47.0
offset_right = -156.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4_vw16h")
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="UI/HUD/Miner"]
layout_mode = 0
offset_left = -9.0
offset_top = -188.0
offset_right = 280.0
offset_bottom = -3.0
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Miner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.75
offset_top = -54.5
offset_right = 29.25
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_aadn8")

[node name="Label" type="Label" parent="UI/HUD/Miner"]
layout_mode = 0
offset_left = -158.75
offset_top = -271.667
offset_right = 207.25
offset_bottom = -20.6667
text = "Farms chests to get gold,
will get focused by enemy

Moveable, 5HP, 
50g"
label_settings = ExtResource("6_mn02w")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Timer" type="Timer" parent="UI/HUD"]
wait_time = 30.0

[node name="TimeTillStart" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 382.0
offset_top = 97.0
offset_right = 876.0
offset_bottom = 148.0
text = "time till start"
label_settings = SubResource("LabelSettings_hujsj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyDisplay" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 565.0
offset_top = 7.0
offset_right = 693.0
offset_bottom = 47.0
text = "moneten"
label_settings = SubResource("LabelSettings_fekdy")
horizontal_alignment = 1

[node name="Castle" type="CharacterBody2D" parent="." groups=["Castle"]]
position = Vector2(620, 314)
scale = Vector2(0.297059, 0.297059)
script = ExtResource("6_jsuhw")

[node name="CastleShape" type="CollisionShape2D" parent="Castle" groups=["Castle"]]
position = Vector2(67.3267, 18.5151)
shape = SubResource("RectangleShape2D_gqsv7")

[node name="Healthbar" type="ProgressBar" parent="Castle"]
offset_left = -50.495
offset_top = 185.148
offset_right = 191.505
offset_bottom = 209.148
theme = ExtResource("11_1vmyv")
theme_override_constants/outline_size = 0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="Castle" groups=["Castle"]]

[node name="CastleCollision" type="CollisionShape2D" parent="Castle/Area2D" groups=["Castle"]]
position = Vector2(69.01, 16.8318)
shape = SubResource("RectangleShape2D_4duwd")

[node name="ExclusionBody" type="Area2D" parent="."]
position = Vector2(635, 319)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExclusionBody"]
position = Vector2(6, 3)
shape = SubResource("RectangleShape2D_77shi")

[node name="DeathScreen" parent="." instance=ExtResource("13_i1y4i")]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 1
size_flags_horizontal = 4

[connection signal="mouse_entered" from="UI/HUD/Mage" to="." method="_on_mage_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/Mage" to="." method="_on_mage_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/MeeleSpawner" to="." method="_on_meele_spawner_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/MeeleSpawner" to="." method="_on_meele_spawner_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/Tank" to="." method="_on_tank_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/Tank" to="." method="_on_tank_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/Miner" to="." method="_on_miner_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/Miner" to="." method="_on_miner_mouse_exited"]
[connection signal="mouse_entered" from="ExclusionBody" to="." method="_on_exclusion_body_mouse_entered"]
[connection signal="mouse_exited" from="ExclusionBody" to="." method="_on_exclusion_body_mouse_exited"]
